syntax = "proto3";

package where_child_bus.v1;

import "where_child_bus/v1/resources.proto";

service ChildService {
        rpc CreateChild(CreateChildRequest) returns (CreateChildResponse);
        rpc GetChildListByNurseryID(GetChildListByNurseryIDRequest) returns (stream GetChildListByNurseryIDResponse);
        rpc GetChildListByGuardianID(GetChildListByGuardianIDRequest) returns (stream GetChildListByGuardianIDResponse);
        rpc GetChildListByBusID(GetChildListByBusIDRequest) returns (stream GetChildListByBusIDResponse);
}

message CreateChildRequest {
        string nursery_id = 1;
        string guardian_id = 2;
        string name = 3;
        int32 age = 4;
        Sex    sex =5;
        repeated bytes photos = 6;
}

message CreateChildResponse {
        Child child = 1;
}

message GetChildListByNurseryIDRequest {
        string nursery_id = 1;
}

message GetChildListByNurseryIDResponse {
        oneof response_type {
                Children children = 1;
                ChildPhoto photo = 2;
        }
}

message GetChildListByGuardianIDRequest {
        string guardian_id = 1;
}

message GetChildListByGuardianIDResponse {
        oneof response_type {
                Children children = 1;
                ChildPhoto photo = 2;
        }
}

message GetChildListByBusIDRequest {
        string bus_id = 1;
}

message GetChildListByBusIDResponse {
        oneof response_type {
                Children children = 1;
                ChildPhoto photo = 2;
        }
}